# trademind

./: CMakeLists.txt  README.md
config/: config.yaml
include/core/: FIXEngine.h  MessageBus.h  OrderBook.h
include/utils/: Config.h  Logger.h
python/pyquant/: strategy.py
src/: main.cpp
